feat(LL-4): implement importer service and manual scan endpoint
- Add ImporterService with idempotent database operations for series/chapter management
- Create POST /api/library/scan endpoint with detailed statistics response
- Add frontend UI with 'Scan Now' buttons and loading states
- Implement toast notifications showing scan results with actual counts
- Fix critical backend issues: transaction safety, JSONB handling, SQL injection
- Add comprehensive test suite: unit tests, API tests, and E2E tests
- Fix Next.js runtime errors and improve error handling in frontend
- Update test infrastructure to use PostgreSQL instead of SQLite
- Create production Dockerfile for frontend deployment

Completes LL-4: Real series now appear in library grid after scanning

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
 SECRET_KEY=test-secret-key-for-development-only
-DATABASE_URL=sqlite+aiosqlite:///memory:
+DATABASE_URL=postgresql+asyncpg://kiremisu:kiremisu@localhost:5432/kiremisu_test
